네이버 서치 어드바이저 추가

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,12 @@ endif %}
     name="google-site-verification"
     content="H1-UteqZRW9K-fDMdWwRocjIgeMIJdSlykPwqAaYz5g"
   />
+  <!-- Naver Search Advisor -->
+  <meta
+    name="naver-site-verification"
+    content="f2bbc6bbc714d9c866522c489bd1d25b33a66e46"
+  />
+
   <link
     rel="stylesheet"
     href="{{ 'assets/css/main.css' | relative_url }}"
