--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: page
 
   {% if page.comment %}
   <div class="post_comment">
-    {% include disqus.html username = site.disqus.shortname %}
+    <!-- {% include disqus.html username = site.disqus.shortname %} -->
   </div>
   {% endif %}
 </div>
