--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,14 @@ layout: page
   {% if page.comment %}
   <div class="post_comment">
     <!-- {% include disqus.html username = site.disqus.shortname %} -->
+    <script
+      src="https://utteranc.es/client.js"
+      repo="hyunwoome.github.io"
+      issue-term="pathname"
+      theme="photon-dark"
+      crossorigin="anonymous"
+      async
+    ></script>
   </div>
   {% endif %}
 </div>
