--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: page
     <!-- {% include disqus.html username = site.disqus.shortname %} -->
     <script
       src="https://utteranc.es/client.js"
-      repo="hyunwoome.github.io"
+      repo="hyunwoome.github.io/hyunwoome.github.com"
       issue-term="pathname"
       theme="photon-dark"
       crossorigin="anonymous"
