--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: page
       src="https://utteranc.es/client.js"
       repo="hyunwoome/hyunwoome.github.io"
       issue-term="pathname"
-      theme="github-dark"
+      theme="github-light"
       crossorigin="anonymous"
       async
     ></script>
